limits scaling of hero at v large sizes

--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -612,6 +612,12 @@
         display: flex;
         padding-top: calc(975 / 1600 * 100%);
         position: relative;
+
+        @include breakpoints(1600px) {
+            margin: 0 auto;
+            padding-top: 975px;
+            width: 1600px;
+        }
         .o-hero__text-container {
             align-items: center;
             display: flex;
