--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -287,23 +287,23 @@
         }
 
         .-fade-homepage-easter-egg {
-            //opacity: 0;
-            // animation-delay: 6s;
-            // animation-duration: 4s;
-            // animation-name: fadeInAnimation;
-            // animation-iteration-count: 1;
-            // animation-fill-mode: forwards;
-            // animation-timing-function: ease;
+            opacity: 0;
+            animation-delay: 6s;
+            animation-duration: 4s;
+            animation-name: fadeInAnimation;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+            animation-timing-function: ease;
         }
 
         .-fade-homepage-title {
-            //opacity: 0;
-            // animation-delay: 2s;
-            // animation-duration: 8s;
-            // animation-name: fadeInAnimation;
-            // animation-iteration-count: 1;
-            // animation-fill-mode: forwards;
-            // animation-timing-function: ease;
+            opacity: 0;
+            animation-delay: 2s;
+            animation-duration: 8s;
+            animation-name: fadeInAnimation;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+            animation-timing-function: ease;
         }
 
         .-homepage-title {
