--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -523,10 +523,14 @@
                     flex-direction: column;
                     justify-content: center;
                     left: 32px;
-                    margin-top: 60px;
+                    margin-top: 83px;
                     max-width: 72%;
                     top: auto;
                     position: absolute;
+
+                    @include breakpoints("phone"){
+                        margin-top: 60px;
+                    }
 
                     @include breakpoints(1280px){
                         bottom: 12%;
@@ -545,9 +549,10 @@
                     h1 {
                         @include font-size(44px);
                         @include line-height(48px);
-                        margin-bottom: 32px;
+                        margin-bottom: 0;
 
                         @include breakpoints("phone") {
+                            margin-bottom: 32px;
                             @include font-size(43px);
                             @include line-height(52px);
                         }
@@ -589,7 +594,7 @@
                         @include breakpoints("sm-desktop") {
                             max-width: 35%;
                         }
-                        
+
                         @include breakpoints("lg-desktop") {
                             margin-top: 89px;
                             max-width: 26%;
@@ -621,9 +626,14 @@
 
             .-person {
                 bottom: 0;
-                right: 23%;
-                width: 50%;
+                right: 10px;
+                width: 100%;
                 z-index: 5;
+
+                @include breakpoints("phone"){
+                    right: 23%;
+                    width: 50%;
+                }
 
                 @include breakpoints("tablet"){
                     width: 66%;
