tweaking positions of illustrations

--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -627,15 +627,18 @@
             .-person {
                 bottom: 0;
                 right: 10px;
+                max-width: 480px;
                 width: 100%;
                 z-index: 5;
 
                 @include breakpoints("phone"){
-                    right: 23%;
-                    width: 50%;
+                    margin-right: -240px;
+                    right: 50%;
                 }
 
                 @include breakpoints("tablet"){
+                    margin-right: 0;
+                    right: 23%;
                     width: 66%;
                 }
             }
@@ -648,17 +651,26 @@
             }
 
             .-blue-lines {
-                top: 65%;
-                right: 25%;
+                top: 58%;
+                right: 14%;
                 width: 10%;
                 z-index: 1;
+
+                @include breakpoints("tablet"){
+                    top: 65%;
+                    right: 25%;
+                }
             }
 
             .-blue-plant {
-                right: 52%;
+                right: 43%;
                 top: 23%;
                 width: 12%;
                 z-index: 1;
+
+                @include breakpoints("tablet"){
+                    right: 52%;
+                }
             }
 
             .-fog-dots {
@@ -682,10 +694,15 @@
             }
 
             .-green-go {
-                right: 40%;
-                top: 35%;
+                right: 25%;
+                top: 37%;
                 width: 16%;
                 z-index: 1;
+
+                @include breakpoints("tablet"){
+                    right: 40%;
+                    top: 35%;
+                }
             }
 
             .-green-plant {
@@ -714,9 +731,14 @@
             }
 
             .-pink-drop {
-                right: 44%;
-                top: 54%;
-                width: 26%;
+                right: 51%;
+                top: 32%;
+                width: 29%;
+
+                @include breakpoints("tablet"){
+                    right: 50%;
+                    top: 45%;
+                }
             }
 
             .-pink-raindrops {
@@ -726,15 +748,25 @@
             }
 
             .-red-prism {
-                bottom: 11%;
-                right: 76%;
+                bottom: 16%;
+                right: 80%;
                 width: 24%;
+
+                @include breakpoints("tablet"){
+                    bottom: 11%;
+                    right: 76%;
+                }
             }
 
             .-red-teeth {
-                right: 20%;
-                top: 79%;
+                right: 15%;
+                top: 72%;
                 width: 2%;
+
+                @include breakpoints("tablet"){
+                    right: 20%;
+                    top: 79%;
+                }
             }
 
             .-salmon-blob {
